--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-name: 天才まくまくノート
-url: https://maku77.github.io
-logo: /assets/img/logo.jpg
+name: JEXCO
+url: https://jexco.github.io
+logo: /jexco.png
